@startuml
!theme toy
skinparam monochrome true

' Entities and Attributes
entity "Ventas" {
  * VentaID : int <<PK>>
  --
  FechaVenta : datetime
  Total : decimal(10,2)
  ClienteID : int <<FK>>
  EmpleadoID : int <<FK>>
}

entity "Vendedores" {
  * VendedorID : int <<PK>>
  --
  EmpleadoID : int <<FK>>
}

entity "Usuarios" {
  * UsuarioID : int <<PK>>
  --
  NombreUsuario : varchar(50)
  PasswordHash : varchar(255)
  RolID : int <<FK>>
}

entity "Roles" {
  * RolID : int <<PK>>
  --
  NombreRol : varchar(50)
}

entity "Proveedores" {
  * ProveedorID : int <<PK>>
  --
  NombreProveedor : varchar(100)
  Teléfono : varchar(20)
  Email : varchar(100)
}

entity "Productos" {
  * ProductoID : int <<PK>>
  --
  NombreProducto : varchar(100)
  Talle : varchar(10)
  Precio : decimal(10,2)
  StockActual : int
  CategoriaID : int <<FK>>
  ProveedorID : int <<FK>>
}

entity "HistorialPrecios" {
  * ID : int <<PK>>
  --
  ProductoID : int <<FK>>
  PrecioAnterior : decimal(10,2)
  PrecioNuevo : decimal(10,2)
  FechaCambio : datetime
}

entity "Empleados" {
  * EmpleadoID : int <<PK>>
  --
  Nombre : varchar(100)
  Rol : varchar(50)
}

entity "DetalleVenta" {
  * DetalleID : int <<PK>>
  --
  VentaID : int <<FK>>
  ProductoID : int <<FK>>
  Cantidad : int
  Subtotal : decimal(10,2)
}

entity "Clientes" {
  * ClienteID : int <<PK>>
  --
  NombreCompleto : varchar(100)
  Email : varchar(100)
  Teléfono : varchar(20)
  Dirección : varchar(150)
}

entity "Categorías" {
  * CategoriaID : int <<PK>>
  --
  NombreCategoria : varchar(50)
}

entity "AuditoriaCambios" {
  * ID : int <<PK>>
  --
  TablaAfectada : varchar(50)
  Operación : varchar(20)
  FechaHora : datetime
  UsuarioSistema : varchar(100)
  RegistroAfectado : varchar(max)
}

entity "EntradasStock" {
  * EntradaID : int <<PK>>
  --
  ProductoID : int <<FK>>
  Cantidad : int
  FechaEntrada : date
  ProveedorID : int <<FK>>
  Observaciones : nvarchar(255)
}

entity "SalidasStock" {
  * SalidaID : int <<PK>>
  --
  ProductoID : int <<FK>>
  Cantidad : int
  FechaSalida : date
  Motivo : nvarchar(100)
}

entity "Pagos" {
  * PagoID : int <<PK>>
  --
  VentaID : int <<FK>>
  Monto : decimal(10,2)
  MetodoPago : nvarchar(50)
  FechaPago : date
}

entity "Facturas" {
  * FacturaID : int <<PK>>
  --
  VentaID : int <<FK>>
  NumeroFactura : nvarchar(50)
  FechaEmision : date
  Total : decimal(10,2)
}

entity "Descuentos" {
  * DescuentoID : int <<PK>>
  --
  NombreDescuento : nvarchar(100)
  Porcentaje : decimal(5,2)
  FechaInicio : date
  FechaFin : date
  ProductoID : int <<FK>>
  CampañaID : int <<FK>>
}

entity "HistorialComprasClientes" {
  * HistorialID : int <<PK>>
  --
  ClienteID : int <<FK>>
  ProductoID : int <<FK>>
  FechaCompra : date
  Cantidad : int
}

entity "AsistenciasEmpleados" {
  * AsistenciaID : int <<PK>>
  --
  EmpleadoID : int <<FK>>
  Fecha : date
  Estado : nvarchar(50)
}

entity "Salarios" {
  * SalarioID : int <<PK>>
  --
  EmpleadoID : int <<FK>>
  Monto : decimal(10,2)
  FechaPago : date
}

entity "Devoluciones" {
  * DevolucionID : int <<PK>>
  --
  VentaID : int <<FK>>
  ProductoID : int <<FK>>
  Cantidad : int
  FechaDevolucion : date
  Motivo : nvarchar(255)
}

entity "PedidosProveedores" {
  * PedidoProveedorID : int <<PK>>
  --
  ProveedorID : int <<FK>>
  FechaPedido : date
  Estado : nvarchar(50)
}

entity "DetallePedidoProveedor" {
  * DetalleID : int <<PK>>
  --
  PedidoProveedorID : int <<FK>>
  ProductoID : int <<FK>>
  Cantidad : int
  PrecioUnitario : decimal(10,2)
}

entity "Cajas" {
  * CajaID : int <<PK>>
  --
  NombreCaja : nvarchar(50)
  SaldoInicial : decimal(10,2)
  SaldoActual : decimal(10,2)
}

entity "MovimientosCaja" {
  * MovimientoID : int <<PK>>
  --
  CajaID : int <<FK>>
  FechaMovimiento : date
  TipoMovimiento : nvarchar(50)
  Monto : decimal(10,2)
  Descripción : nvarchar(255)
}

entity "PuntosClientes" {
  * PuntoID : int <<PK>>
  --
  ClienteID : int <<FK>>
  PuntosAcumulados : int
  FechaUltimaActualizacion : date
}

entity "CampañasPublicitarias" {
  * CampañaID : int <<PK>>
  --
  NombreCampaña : nvarchar(100)
  Descripción : nvarchar(255)
  FechaInicio : date
  FechaFin : date
  Presupuesto : decimal(10,2)
}

' Relationships
Ventas ||--o{ Clientes : ClienteID
Ventas ||--o{ Empleados : EmpleadoID
Vendedores ||--o{ Empleados : EmpleadoID
Usuarios ||--o{ Roles : RolID
Productos ||--o{ Categorías : CategoriaID
Productos ||--o{ Proveedores : ProveedorID
HistorialPrecios ||--o{ Productos : ProductoID
DetalleVenta ||--o{ Ventas : VentaID
DetalleVenta ||--o{ Productos : ProductoID
EntradasStock ||--o{ Productos : ProductoID
EntradasStock ||--o{ Proveedores : ProveedorID
SalidasStock ||--o{ Productos : ProductoID
Pagos ||--o{ Ventas : VentaID
Facturas ||--o{ Ventas : VentaID
HistorialComprasClientes ||--o{ Clientes : ClienteID
HistorialComprasClientes ||--o{ Productos : ProductoID
AsistenciasEmpleados ||--o{ Empleados : EmpleadoID
Salarios ||--o{ Empleados : EmpleadoID
Devoluciones ||--o{ Ventas : VentaID
Devoluciones ||--o{ Productos : ProductoID
PedidosProveedores ||--o{ Proveedores : ProveedorID
DetallePedidoProveedor ||--o{ PedidosProveedores : PedidoProveedorID
DetallePedidoProveedor ||--o{ Productos : ProductoID
MovimientosCaja ||--o{ Cajas : CajaID
PuntosClientes ||--o{ Clientes : ClienteID
Descuentos ||--o{ Productos : ProductoID
Descuentos ||--o{ CampañasPublicitarias : CampañaID
@enduml
